implement some suggestions, most notably URL->URI for trackers